@@ -1,0 +1,1 @@
+<% if  has_content? :foo %>foo<% end %><% if !has_content? :bar %>bar<% end %>
